@@ -582,6 +582,8 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 4469) Namespace-specific notice to be displayed below site-notice
   Edit messages like "MediaWiki:Namespacenotice-" plus namespace name
   which is blank for main namespace, or like e.g. "User_talk"
+* Adjust user login/creation form hooks to work with a captcha plugin
+
 
 === Caveats ===
 
